<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgnd_color"
    tools:context="com.tastycafe.mykotlinsample.Common.CommonActivities.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgnd_color">

        <ImageView
            android:id="@+id/img_back_arrow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/back_arrow"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back_text"
            android:gravity="start"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_to_continue"
            android:gravity="start"
            android:textStyle="normal"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textAllCaps="false"/>

        <EditText
            android:id="@+id/emailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000"
            android:background="@drawable/border"
            android:padding="8dp"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="30"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColorHint="@color/shadowColor"
            android:inputType="textEmailAddress"
            android:layout_marginTop="35dp"
            android:hint="Email Address"/>

        <EditText
            android:id="@+id/passwordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000"
            android:background="@drawable/border"
            android:padding="8dp"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="textPassword"
            android:layout_marginTop="25dp"
            android:textColorHint="@color/shadowColor"
            android:hint="Password"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/login_text"
            android:fontFamily="@font/firefans_regular"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btnborder"
            android:textAllCaps="false"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/black"
                android:fontFamily="@font/firefans_regular"/>

            <TextView
                android:id="@+id/forgot_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:textSize="16sp"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/black"
                android:fontFamily="@font/firefans_regular"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/coffee_img"/>

    </LinearLayout>

</LinearLayout>