<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgnd_color"
    app:ignore="NamespaceTypo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/additem_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/white"
                android:src="@drawable/back_arrow"/>

            <TextView
                android:id="@+id/cate_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Items"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardElevation="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/added_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:layout_centerInParent="true"
                        android:src="@drawable/icon_upload"/>

                    <ImageView
                        android:id="@+id/add_image"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_add"
                        android:padding="2dp"
                        android:tint="@color/white"
                        android:layout_centerInParent="true"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:background="#8888"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/itemname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000"
            android:background="@drawable/border"
            android:padding="8dp"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="30"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColorHint="@color/shadowColor"
            android:inputType="textCapSentences|text"
            android:layout_marginTop="35dp"
            android:hint="Enter Item"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="18sp"
                android:fontFamily="@font/firefans_regular"
                android:text="@string/itemprice"/>

            <EditText
                android:id="@+id/price_dollor"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000"
                android:background="@drawable/border"
                android:padding="8dp"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginLeft="8dp"
                android:maxLength="2"
                android:gravity="center"
                android:textColorHint="@color/shadowColor"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/firefans_regular"
                android:text="."/>

            <EditText
                android:id="@+id/price_cents"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000"
                android:background="@drawable/border"
                android:padding="8dp"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginLeft="5dp"
                android:maxLength="2"
                android:gravity="center"
                android:textColorHint="@color/shadowColor"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/firefans_regular"
                android:text="$"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="18sp"
                android:fontFamily="@font/firefans_regular"
                android:text="@string/offerprice"/>

            <EditText
                android:id="@+id/offer_dollor"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000"
                android:background="@drawable/border"
                android:padding="8dp"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginLeft="5dp"
                android:maxLength="2"
                android:gravity="center"
                android:textColorHint="@color/shadowColor"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/firefans_regular"
                android:text="."/>

            <EditText
                android:id="@+id/offer_cents"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000"
                android:background="@drawable/border"
                android:padding="8dp"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginLeft="5dp"
                android:maxLength="2"
                android:gravity="center"
                android:textColorHint="@color/shadowColor"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/firefans_regular"
                android:text="$"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/firefans_regular"
                android:text="@string/item_hot_or_cold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />

            <ToggleButton
                android:id="@+id/hot_cold_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                android:textOff="Cool"
                android:textOn="Hot"
                android:layout_marginLeft="10dp"
                android:textAllCaps="false"/>

        </LinearLayout>

        <Button
            android:id="@+id/create_item_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/create_item"
            android:fontFamily="@font/firefans_regular"
            android:textSize="18sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/btnborder"
            android:textAllCaps="false"/>

       </LinearLayout>

</LinearLayout>